feat: [Kan-71] customer view order list detail backend tasks (#5)
* feat: customer list orders and view details

* test: unit test for customer browse orders

* refactor: reduce some duplications

* Update server/http/router/router.go


---------
